# Mujina-Public

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-windows.bat  build-windows.sh  build.sh  x64_x86 Cross Tools Command Prompt for VS 2022.lnk
.github/workflows/: build.yml  linux.yml  windows.yml
libMujina/: Base.cpp  Base.hpp  Console.cpp  Console.hpp  libMujina.cpp  mappings.hpp
libMujina/ClassFileParser/: ClassFileParser.cpp  ClassFileParser.hpp
libMujina/InjectableJar/: ignore_File2Hex
libMujina/InjectableJar/InjectableJar/: build.xml  remap.bat  remap.sh
libMujina/InjectableJar/InjectableJar/src/io/github/lefraudeur/: Main.java  Patcher.java
libMujina/InjectableJar/InjectableJar/src/io/github/lefraudeur/events/: BlockCollisionEvent.java  PacketSendEvent.java  PostDoAttackEvent.java  PostRender2DEvent.java  PostRender3DEvent.java  PostTickEvent.java  PreDoAttackEvent.java  PreRender3DEvent.java
libMujina/InjectableJar/InjectableJar/src/io/github/lefraudeur/gui/clickgui/: ClickGUI.java  Frame.java
libMujina/InjectableJar/InjectableJar/src/io/github/lefraudeur/modules/combat/: Aura.java  BackTrack.java  wTap.java
libMujina/InjectableJar/InjectableJar/src/io/github/lefraudeur/utils/: FindItemResult.java  MoveUtils.java  Target.java
libMujina/JNI/: JNI.cpp  JNI.hpp
libMujina/JarLoader/: JarLoader.cpp  JarLoader.hpp
libMujina/Java/: Java.cpp  Java.hpp
libMujina/StringCleaner/: StringCleaner.cpp  StringCleaner.hpp
libMujina/Transformer/: Transformer.cpp  Transformer.hpp
libMujina/lib/: ixwebsocket.lib  z.lib
(+70 files in other folders)
